copying other users plants working

--- a/app/views/plants/plants.erb
+++ b/app/views/plants/plants.erb
@@ -117,7 +117,7 @@
                     </div>
                     <div class="col s4 right-align">
                       <a class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="myFunction()"><i class="material-icons right-align">share</i></a>
-                      <a href="" class="btn-flat" style="margin-right:5px;padding:0px !important;"><i class="material-icons right-align">content_copy</i></a>
+                      <a href="#" class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="document.getElementById('copyplant').submit();"><i class="material-icons right-align">content_copy</i></a>
                       <a class="btn-flat" style="margin-right:5px;padding:0px !important;"><i class="material-icons right-align">favorite_border</i></a>
                     </div>
                   </div>
