--- a/app/views/users/my_plants.erb
+++ b/app/views/users/my_plants.erb
@@ -69,7 +69,6 @@
 <div class="parallax-container" style="height:300px;">
   <div class="parallax" style="background-color:#43A047;"><img src="https://images.pexels.com/photos/631909/pexels-photo-631909.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb" style="opacity: 0.6; filter:blur(5px);"></div>
         <h2 class="header center-align" style="color:#ffffff; margin-top:1.25em;">My Greenhouse</h2>
-        <hr style="border-color:#ffffff; width:40%;"><br>
           <p class="center-align">
             <a href="/plants/new"><button class="btn-large waves-effect waves-light deep-orange lighten-1">Create Plant
                 <i class="material-icons right">add</i>
@@ -90,7 +89,7 @@
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Journal"><a href="/plants/<%=plant.id%>"><i class="material-icons">event_note</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="New Status"><a class="modal-trigger" data-target="statusmodal"><i class="material-icons">playlist_add</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Edit"><a href="/plants/<%=plant.id%>/edit"><i class="material-icons">edit</i></a></li>
-                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#!"><i class="material-icons">content_copy</i></a></li>
+                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#!" onclick="document.getElementById('copyplant').submit();"><i class="material-icons">content_copy</i></a></li>
                           <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Delete"><a href="#" onclick="document.getElementById('deleteplant').submit();"><i class="material-icons">delete_forever</i></a></li>
                       </ul>
                     </div>
@@ -112,9 +111,9 @@
                     <a href="#" class=" teal-text text-lighten-1"><%=plant.instructions.last.water_amt%> <%=plant.instructions.last.water_amt_unit%> of water every <%=plant.instructions.last.water_freq%> <%=plant.instructions.last.water_freq_unit%></a>
                     </div>
                     <div class="col s4 right-align">
-                      <a href="#"><i class="material-icons right-align">share</i></a>
-                      <a href="#"><i class="material-icons right-align">content_copy</i></a>
-                      <a href="#"><i class="material-icons right-align">favorite_border</i></a>
+                      <a class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="myFunction()"><i class="material-icons right-align">share</i></a>
+                      <a href="#" class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="document.getElementById('copyplant').submit();"><i class="material-icons right-align">content_copy</i></a>
+                      <!-- <a class="btn-flat" style="margin-right:5px;padding:0px !important;"><i class="material-icons right-align">favorite_border</i></a> -->
                     </div>
                   </div>
                 </div>
@@ -139,6 +138,10 @@
                 </div>
                 </div>
               </div>
+
+            <form id="copyplant" action="/plants/<%=plant.id%>/copy" method="POST" style="display:none !important;">
+              <input type="submit" value="Copy Plant" id="copy">
+            </form>
 
             <form id="deleteplant" action="/plants/<%=plant.id%>/delete" method="post" style="display:none !important;">
               <input id="hidden" type="hidden" name="_method" value="delete">
