--- a/app/views/plants/plants.erb
+++ b/app/views/plants/plants.erb
@@ -55,7 +55,7 @@
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Journal"><a href="/plants/<%=plant.id%>"><i class="material-icons">event_note</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="New Status"><a class="modal-trigger" data-target="statusmodal"><i class="material-icons">playlist_add</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Edit"><a href="/plants/<%=plant.id%>/edit"><i class="material-icons">edit</i></a></li>
-                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#" onclick="document.getElementById('copyplant').submit();"><i class="material-icons">content_copy</i></a></li>
+                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#" onclick="document.getElementById('copyplant-<%=plant.id%>').submit();"><i class="material-icons">content_copy</i></a></li>
                           <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Delete"><a href="#" onclick="document.getElementById('deleteplant').submit();"><i class="material-icons">delete_forever</i></a></li>
                       </ul>
                     </div>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="col s4 right-align">
                       <a class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="myFunction()"><i class="material-icons right-align">share</i></a>
-                      <a href="#" class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="document.getElementById('copyplant').submit();"><i class="material-icons right-align">content_copy</i></a>
+                      <a href="#" class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="document.getElementById('copyplant-<%=plant.id%>').submit();"><i class="material-icons right-align">content_copy</i></a>
                       <a class="btn-flat" style="margin-right:5px;padding:0px !important;"><i class="material-icons right-align">favorite_border</i></a>
                     </div>
                   </div>
@@ -106,7 +106,7 @@
                 </div>
               </div>
 
-              <form id="copyplant" action="/plants/<%=plant.id%>/copy" method="POST" style="display:none !important;">
+              <form id="copyplant-<%=plant.id%>" action="/plants/<%=plant.id%>/copy" method="POST" style="display:none !important;">
                 <input type="submit" value="Copy Plant" id="copy">
               </form>
 
@@ -116,10 +116,11 @@
             </form>
           </div>
 
+          <!-- The create a new status popup for the plant when click on New Status Icon from toolbar -->
           <div id="statusmodal" class="modal modal-fixed-footer">
            <form id="newplant" action="/<%=plant.id%>/statuses" method="POST">
            <div class="modal-content">
-                    <h5 class="center-align"><i class="fa fa-pagelines fa-2x" aria-hidden="true" style="color:#00acc1;"></i></h5>
+                  <h5 class="center-align"><i class="fa fa-pagelines fa-2x" aria-hidden="true" style="color:#00acc1;"></i></h5>
                    <h4 class="header center-align" style="color:#00acc1;"><%=plant.name%> Status Update</h4>
                    <div class="input-field" id="plant_statuses_event" >
                    <select name="plant[statuses][event]" form="newplant">
@@ -164,12 +165,12 @@
                      </div>
              </div>
 
-             <div class="modal-footer">
-                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Cancel</a>
-                <button class="btn waves-effect waves-light deep-orange lighten-1" type="submit" name="action">Update
-                    <i class="material-icons right">add</i>
-                </button>
-             </div>
+                 <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Cancel</a>
+                    <button class="btn waves-effect waves-light deep-orange lighten-1" type="submit" name="action">Update
+                        <i class="material-icons right">add</i>
+                    </button>
+                 </div>
                </form>
              </div>
       <%end%>
