--- a/app/views/users/my_plants.erb
+++ b/app/views/users/my_plants.erb
@@ -52,7 +52,7 @@
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Journal"><a href="/plants/<%=plant.id%>"><i class="material-icons">event_note</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="New Status"><a class="modal-trigger" data-target="statusmodal"><i class="material-icons">playlist_add</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Edit"><a href="/plants/<%=plant.id%>/edit"><i class="material-icons">edit</i></a></li>
-                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#!" onclick="document.getElementById('copyplant').submit();"><i class="material-icons">content_copy</i></a></li>
+                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#!" onclick="document.getElementById('copyplant-<%=plant.id%>').submit();"><i class="material-icons">content_copy</i></a></li>
                           <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Delete"><a href="#" onclick="document.getElementById('deleteplant').submit();"><i class="material-icons">delete_forever</i></a></li>
                       </ul>
                     </div>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="col s4 right-align">
                       <a class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="myFunction()"><i class="material-icons right-align">share</i></a>
-                      <a href="#" class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="document.getElementById('copyplant').submit();"><i class="material-icons right-align">content_copy</i></a>
+                      <a href="#" class="btn-flat" style="margin-right:5px;padding:0px !important;" onclick="document.getElementById('copyplant-<%=plant.id%>').submit();"><i class="material-icons right-align">content_copy</i></a>
                       <!-- <a class="btn-flat" style="margin-right:5px;padding:0px !important;"><i class="material-icons right-align">favorite_border</i></a> -->
                     </div>
                   </div>
@@ -102,7 +102,7 @@
                 </div>
               </div>
 
-            <form id="copyplant" action="/plants/<%=plant.id%>/copy" method="POST" style="display:none !important;">
+            <form id="copyplant-<%=plant.id%>" action="/plants/<%=plant.id%>/copy" method="POST" style="display:none !important;">
               <input type="submit" value="Copy Plant" id="copy">
             </form>
 
