--- a/app/views/users/my_plants.erb
+++ b/app/views/users/my_plants.erb
@@ -53,7 +53,7 @@
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="New Status"><a class="modal-trigger" data-target="statusmodal"><i class="material-icons">playlist_add</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Edit"><a href="/plants/<%=plant.id%>/edit"><i class="material-icons">edit</i></a></li>
                         <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#!" onclick="document.getElementById('copyplant-<%=plant.id%>').submit();"><i class="material-icons">content_copy</i></a></li>
-                          <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Delete"><a href="#" onclick="document.getElementById('deleteplant').submit();"><i class="material-icons">delete_forever</i></a></li>
+                          <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Delete"><a href="#" onclick="document.getElementById('deleteplant-<%=plant.id%>').submit();"><i class="material-icons">delete_forever</i></a></li>
                       </ul>
                     </div>
                   <%end%>
@@ -106,7 +106,7 @@
               <input type="submit" value="Copy Plant" id="copy">
             </form>
 
-            <form id="deleteplant" action="/plants/<%=plant.id%>/delete" method="post" style="display:none !important;">
+            <form id="deleteplant-<%=plant.id%>" action="/plants/<%=plant.id%>/delete" method="post" style="display:none !important;">
               <input id="hidden" type="hidden" name="_method" value="delete">
               <input type="submit" value="Delete Plant" id="delete">
             </form>
