added activerecord validations to plants model

--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -18,7 +18,7 @@
           <form id="newplant" action="/plants" class="col s12" method="POST">
             <div class="row">
               <div class="input-field col s12">
-                <input id="name" type="text" name="plant[name]" required>
+                <input id="name" type="text" name="plant[name]">
                 <label for="name">Plant Name</label>
               </div>
             </div>
@@ -33,38 +33,38 @@
               <div class="col s3">
                 <h6 style="color:#00acc1;">Sunlight Needs</h6>
                 <p>
-                <input name="plant[sunlight]" type="radio" id="sunlight_low" value="Low"/>
+                <input name="plant[sunlight]" type="radio" id="sunlight_low" value="Low" required/>
                 <label for="sunlight_low">Low</label>
               </p>
                 <p>
-                <input name="plant[sunlight]" type="radio" id="sunlight_med" value="Medium"/>
+                <input name="plant[sunlight]" type="radio" id="sunlight_med" value="Medium" required/>
                 <label for="sunlight_med">Medium</label>
               </p>
                 <p>
-                <input name="plant[sunlight]" type="radio" id="sunlight_high" value="High"/>
+                <input name="plant[sunlight]" type="radio" id="sunlight_high" value="High" required/>
                 <label for="sunlight_high">High</label>
               </p>
               </div>
               <div class="col s3">
                 <h6 style="color:#00acc1;">Soil Type</h6>
                 <p>
-                  <input name="plant[soil]" type="radio" id="soil-clay" value="Clay"/>
+                  <input name="plant[soil]" type="radio" id="soil-clay" value="Clay" required/>
                   <label for="soil-clay">Clay</label>
                 </p>
                 <p>
-                  <input name="plant[soil]" type="radio" id="soil-silt" value="Silt"/>
+                  <input name="plant[soil]" type="radio" id="soil-silt" value="Silt" required/>
                   <label for="soil-silt">Silt</label>
                 </p>
                 <p>
-                  <input name="plant[soil]" type="radio" id="soil-peaty" value="Peaty"/>
+                  <input name="plant[soil]" type="radio" id="soil-peaty" value="Peaty" required/>
                   <label for="soil-peaty">Peaty</label>
                 </p>
                 <p>
-                  <input name="plant[soil]" type="radio" id="soil-loam" value="Loam"/>
+                  <input name="plant[soil]" type="radio" id="soil-loam" value="Loam" required/>
                   <label for="soil-loam">Loam</label>
                 </p>
                 <p>
-                  <input name="plant[soil]" type="radio" id="soil-chalky" value="Chalky"/>
+                  <input name="plant[soil]" type="radio" id="soil-chalky" value="Chalky" required/>
                   <label for="soil-chalky">Chalky</label>
                 </p>
               </div>
@@ -72,19 +72,19 @@
               <div class="col s3">
                 <h6 style="color:#00acc1;">Container Size</h6>
                 <p>
-                  <input name="plant[container]" type="radio" id="container-xs" value="Extra Small"/>
+                  <input name="plant[container]" type="radio" id="container-xs" value="Extra Small" required/>
                   <label for="container-xs">Extra Small</label>
                 </p>
                 <p>
-                  <input name="plant[container]" type="radio" id="container-sm" value="Small"/>
+                  <input name="plant[container]" type="radio" id="container-sm" value="Small" required/>
                   <label for="container-sm">Small</label>
                 </p>
                 <p>
-                  <input name="plant[container]" type="radio" id="container-med" value="Medium"/>
+                  <input name="plant[container]" type="radio" id="container-med" value="Medium" required/>
                   <label for="container-med">Medium</label>
                 </p>
                 <p>
-                  <input name="plant[container]" type="radio" id="container-lg" value="Large"/>
+                  <input name="plant[container]" type="radio" id="container-lg" value="Large" required/>
                   <label for="container-lg">Large</label>
                 </p>
               </div>
@@ -92,19 +92,19 @@
               <div class="col s3">
                 <h6 style="color:#00acc1;">Soil Drainage Needs</h6>
                 <p>
-                  <input name="plant[drainage]" type="radio" id="drainage-low" value="Low" />
+                  <input name="plant[drainage]" type="radio" id="drainage-low" value="Low"  required/>
                   <label for="drainage-low">Low</label>
                 </p>
                 <p>
-                  <input name="plant[drainage]" type="radio" id="drainage-med" value="Medium"/>
+                  <input name="plant[drainage]" type="radio" id="drainage-med" value="Medium" required/>
                   <label for="drainage-med">Medium</label>
                 </p>
                 <p>
-                  <input name="plant[drainage]" type="radio" id="drainage-high" value="High"/>
+                  <input name="plant[drainage]" type="radio" id="drainage-high" value="High" required/>
                   <label for="drainage-high">High</label>
                 </p>
                 <p>
-                  <input name="plant[drainage]" type="radio" id="drainage-very-high" value="Very High"/>
+                  <input name="plant[drainage]" type="radio" id="drainage-very-high" value="Very High" required/>
                   <label for="drainage-very-high">Very High</label>
                 </p>
               </div>
@@ -181,7 +181,7 @@
                <h4 class="header center-align" style="color:#00acc1; margin-top:50px;">Add care instructions</h4>
                <div class="row">
                  <div class="input-field col s4">
-                   <input id="water-amt" type="text" name="plant[instructions][water_amt]" required>
+                   <input id="water-amt" type="text" name="plant[instructions][water_amt]">
                    <label for="water-amt">Water Amount</label>
                  </div>
                  <div class="input-field col s8">
