--- a/app/views/plants/edit_plant.erb
+++ b/app/views/plants/edit_plant.erb
@@ -32,7 +32,7 @@
             </div>
 
             <div class="row">
-              <div class="col s3">
+              <div class="col s12 m3">
                 <%sun = @plant.sunlight%>
                 <%dirt = @plant.soil%>
                 <%pot = @plant.container_size%>
@@ -51,7 +51,7 @@
                 <label for="sunlight_high">High</label>
               </p>
               </div>
-              <div class="col s3">
+              <div class="col s12 m3">
                 <h6 style="color:#00acc1;">Soil Type</h6>
                 <p>
                   <input name="plant[soil]" type="radio" id="soil-clay" value="Clay" <%='checked' if (dirt == 'Clay')%> required/>
@@ -73,9 +73,17 @@
                   <input name="plant[soil]" type="radio" id="soil-chalky" value="Chalky" <%='checked' if (dirt == 'Chalky')%> required/>
                   <label for="soil-chalky">Chalky</label>
                 </p>
+                <p>
+                  <input name="plant[soil]" type="radio" id="soil-sandy" value="Sandy" required/>
+                  <label for="soil-sandy">Sandy</label>
+                </p>
+                <p>
+                  <input name="plant[soil]" type="radio" id="soil-rocky" value="Rocky" required/>
+                  <label for="soil-rocky">Rocky</label>
+                </p>
               </div>
 
-              <div class="col s3">
+              <div class="col s12 m3">
                 <h6 style="color:#00acc1;">Container Size</h6>
                 <p>
                   <input name="plant[container]" type="radio" id="container-xs" value="Extra Small" <%='checked' if (pot == 'Extra Small')%> required/>
@@ -93,9 +101,13 @@
                   <input name="plant[container]" type="radio" id="container-lg" value="Large" <%='checked' if (pot == 'Large')%> required/>
                   <label for="container-lg">Large</label>
                 </p>
+                <p>
+                  <input name="plant[container]" type="radio" id="container-xl" value="Extra Large" required/>
+                  <label for="container-xl">Extra Large</label>
+                </p>
               </div>
 
-              <div class="col s3">
+              <div class="col s12 m3">
                 <h6 style="color:#00acc1;">Soil Drainage Needs</h6>
                 <p>
                   <input name="plant[drainage]" type="radio" id="drainage-low" value="Low" <%='checked' if (drain == 'Low')%> required/>
@@ -125,11 +137,11 @@
    <div class="col s8 offset-s2">
      <h4 class="header center-align" style="color:#00acc1; margin-top:50px;">Edit care instructions</h4>
      <div class="row">
-       <div class="input-field col s4">
+       <div class="input-field col s4 m12">
          <input id="water-amt" type="text" name="plant[instructions][water_amt]" value="<%=@plant.instructions.last[:water_amt]%>">
          <label for="water-amt">Water Amount</label>
        </div>
-       <div class="input-field col s8">
+       <div class="input-field col s8 m12">
          <%unit = @plant.instructions.last[:water_amt_unit]%>
        <select id="liquid" name="plant[instructions][water_amt_unit]" form="editplant">
          <option value="" disabled selected>Unit of Water</option>
@@ -146,11 +158,11 @@
      </div>
 
      <div class="row">
-       <div class="input-field col s4">
+       <div class="input-field col s4 m12">
          <input id="water-freq" type="text" name="plant[instructions][water_freq]" value="<%=@plant.instructions.last[:water_freq]%>">
          <label for="water-freq">Water Frequency</label>
        </div>
-       <div class="input-field col s8">
+       <div class="input-field col s8 m12">
          <%pfreq = @plant.instructions.last[:water_freq_unit]%>
        <select name="plant[instructions][water_freq_unit]" form="editplant">
          <option value="" disabled selected>Frequency Unit</option>
