--- a/app/views/plants/plants.erb
+++ b/app/views/plants/plants.erb
@@ -18,7 +18,7 @@
 </style>
 <nav>
    <div class="nav-wrapper green darken-1">
-     <a href="/" class="brand-logo">PlantTrack</a>
+     <a href="/" class="brand-logo">PlantTrackr</a>
      <ul class="right hide-on-med-and-down">
        <li class="active"><a href="/plants">Browse</a></li>
        <li><a href="/greenhouse">My Plants</a></li>
