--- a/app/views/users/my_plants.erb
+++ b/app/views/users/my_plants.erb
@@ -19,7 +19,7 @@
 </style>
 <nav>
    <div class="nav-wrapper green darken-1">
-     <a href="/" class="brand-logo">PlantTrack</a>
+     <a href="/" class="brand-logo">PlantTrackr</a>
      <ul class="right hide-on-med-and-down">
        <li><a href="/plants">Browse</a></li>
        <li><a href="/greenhouse" class="active">My Plants</a></li>
