--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
 <nav>
    <div class="nav-wrapper green darken-1">
-     <a href="/" class="brand-logo">PlantTrack</a>
+     <a href="/" class="brand-logo">PlantTrackr</a>
    </div>
  </nav>
 
